[package]
name = "actix_graphql"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
async-graphql = "6"
async-graphql-actix-web = "6"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
validator = { version = "0.16", features = ["derive"] }
