[package]
name = "actix_graphql"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
validator = { version = "0.16", features = ["derive"] }
# Web Framework
actix-web = "4"
async-graphql = "6"
async-graphql-actix-web = "6"

# AI モデル推論
tract-onnx = "0.19" # ONNX (TensorFlow / Scikit-learn モデル)
tch = "0.10"        # PyTorch (torchscript / .pt モデル)


# スレッド安全なキャッシュ
lazy_static = "1.4"
